[metadata]
name = piedmont
version = 1.0.0
url = https://appalachianwx.com
license = BSD-3-Clause
maintainer = Evan Fisher & Wes Grimes
maintainer_email = wesgrimes@gmail.com
description = Weather plots for the Southern Apps
long_description = file: README.rst
long_description_content_type = text/x-rst

[options]
packages = find:
include_package_data = true
install_requires =
    Flask

[options.extras_require]
test =
    pytest

[tool:pytest]
testpaths = tests

[coverage:run]
branch = True
source =
    piedmont